# dotaml-turbo

./: .gitignore  CLAUDE.md  NOTES.md  README.md  budget.yaml  dvc.yaml  pyproject.toml  splits.yaml
.github/workflows/: validate.yml
_meta/: deferred-foundation-paths.md  index.md  log.md  status.ndjson  token_log.ndjson
_meta/hardware-investigation-2026-05-21/: test_pyarrow_roundtrip.py
_meta/templates/: paper.md
_meta/upstream/: ISSUE_BODY.md  ISSUE_TITLE.txt  RETRACTED.md  RETRACTION_DRAFT.md  torch-dataloader-gc-segfault-report.md  torch-dataloader-gc-segfault-repro.py
concepts/: attention-bias-positional.md  draft-only-win-prediction.md  draft-prediction-plateau.md  embedding-vs-features-gradient-competition.md  fake-match-filtering.md  hero-embedding-vs-onehot.md  masked-modeling-tabular.md  match-id-vs-seq-num-ordering.md  multi-query-foundation-model.md  radiant-side-advantage.md  supervised-multitask-pretraining.md  tabular-foundation-model.md  task-as-token-prompting.md  uncertainty-weighted-multitask.md
docs/: index.html
docs/decisions/: 0001-per-trial-subprocess-isolation.md
experiments/2026-05-15-plateau-architectures-740/: README.md  config.yaml  data.py  log.md  metrics.json  models.py  notes.qmd  run_all.py  train.py
experiments/2026-05-15-plateau-baseline-740/: README.md  build_features.py  config.yaml  log.md  metrics.json  notes.qmd  pull_raw.py  train.py
experiments/2026-05-16-transformer-hp-sweep-740/: README.md  cleanup_failed_trials.py  config.yaml  data.py  log.md  metrics.json  models.py  notes.qmd  objective.py  run_sweep.py  run_sweep_loop.sh  train_one.py
journal/: 2026-05-15.md  2026-05-17.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-27.md  2026-06-03.md
literature/papers/: bi2022pangu.md  (+12 more)
mocs/: foundation-models.md
(+333 files in other folders)
