[project]
name = "dotaml-turbo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=17",
    "lightgbm>=4.5",
    "scikit-learn>=1.5",
    "numpy>=2.0",
    "pandas>=2.2",
    "azure-storage-blob>=12.20",
    "azure-identity>=1.17",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "matplotlib>=3.9",
    "scipy>=1.13",
    "orjson>=3.10",
]
